--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ SET(CMAKE_BUILD_TYPE Release)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall")
 
-file(GLOB SOURCE_FILES "src/*.hpp" "src/*.cpp" "src/*.h" "src/*.c")
+file(GLOB SOURCE_FILES "src/*.cpp" "src/*.hpp" "src/*.c")
 add_executable(smashpp ${SOURCE_FILES})
