--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.3.2)
-project(smashpp)
+#project(smashpp)
 SET(CMAKE_BUILD_TYPE Release)
 #SET(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall")
 
-file(GLOB SOURCE_FILES "src/*.cpp" "src/*.hpp" "src/*.c")
-add_executable(smashpp ${SOURCE_FILES})
+add_executable(smashpp  src/main.cpp src/cmls4.cpp src/fcm.cpp
+        src/logtbl8.cpp src/tbl32.cpp src/tbl64.cpp src/def.hpp src/par.hpp)
+add_executable(bench    src/bench.cpp)
+
+#file(GLOB SOURCE_FILES "src/*.cpp" "src/*.hpp" "src/*.c")
+#add_executable(smashpp ${SOURCE_FILES})
