--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ SET(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -Wall")
 
 add_executable(smashpp  src/main.cpp src/fcm.cpp src/tbl64.cpp src/tbl32.cpp
-        src/cmls4.cpp src/logtbl8.cpp src/def.hpp src/par.hpp src/assert.hpp)
+        src/cmls4.cpp src/logtbl8.cpp src/def.hpp src/par.hpp src/assert.hpp
+        src/fn.hpp)
 
 #add_executable(bench    src/bench.cpp)
 
