--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(smashpp  src/main.cpp
                         src/cmls4.cpp
                         src/logtbl8.cpp
                         src/filter.cpp
+                        src/segment.cpp
                         src/def.hpp
                         src/par.hpp
                         src/assert.hpp
