--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,12 @@ add_executable(smashpp          src/main.cpp
                                 src/fn.hpp
                                 src/mdlpar.hpp)
 
-add_executable(eleanora-visual  src/eleanor/eleanora-visual.c
-                                src/eleanor/mem.c
-                                src/eleanor/time.c
-                                src/eleanor/msg.c
-                                src/eleanor/paint.c
-                                src/eleanor/common.c
+add_executable(eleanora-visual  src/eleanor/eleanora-visual.cpp
+                                src/eleanor/mem.cpp
+                                src/eleanor/time.cpp
+                                src/eleanor/msg.cpp
+                                src/eleanor/paint.cpp
+                                src/eleanor/common.cpp
                                 src/eleanor/defs.h
                                 src/eleanor/param.h)
 
