--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,9 @@ add_executable(smashpp         src/main.cpp
 add_executable(smashpp-visual  src/visualizer/eleanora-visual.cpp
                                src/visualizer/mem.cpp
                                src/visualizer/time.cpp
-                               src/visualizer/msg.cpp
                                src/visualizer/paint.cpp
-                               src/visualizer/common.cpp
                                src/visualizer/defs.h
-                               src/visualizer/param.h src/visualizer/vizparam.cpp src/visualizer/vizparam.hpp)
+                               src/visualizer/vizparam.hpp)
 
 #add_executable(excule_N src/excludeN.cpp)
 
