--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,25 +8,25 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3 -Wall")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
 
-add_executable(smashpp         src/main.cpp
-                               src/fcm.cpp
-                               src/tbl64.cpp
-                               src/tbl32.cpp
-                               src/cmls4.cpp
-                               src/logtbl8.cpp
-                               src/filter.cpp
-                               src/segment.cpp
-                               src/def.hpp
-                               src/par.hpp
-                               src/assert.hpp
-                               src/fn.hpp
-                               src/mdlpar.hpp)
+add_executable(smashpp          src/main.cpp
+                                src/fcm.cpp
+                                src/tbl64.cpp
+                                src/tbl32.cpp
+                                src/cmls4.cpp
+                                src/logtbl8.cpp
+                                src/filter.cpp
+                                src/segment.cpp
+                                src/def.hpp
+                                src/par.hpp
+                                src/assert.hpp
+                                src/fn.hpp
+                                src/mdlpar.hpp)
 
-add_executable(smashpp-visual  src/visualizer/eleanora-visual.cpp
-                               src/visualizer/mem.cpp
-                               src/visualizer/vizpaint.cpp
-                               src/visualizer/defs.h
-                               src/visualizer/vizparam.hpp)
+add_executable(eleanora-visual  src/vizmain.cpp
+        src/vizpaint.cpp
+        src/vizparam.hpp
+                                src/vizdef.hpp)
+
 
 #add_executable(excule_N src/excludeN.cpp)
 
