--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,21 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
 
 add_executable(smashpp  src/main.cpp
-                        src/fcm.cpp
-                        src/tbl64.cpp
-                        src/tbl32.cpp
-                        src/cmls4.cpp
-                        src/logtbl8.cpp
-                        src/filter.cpp
-                        src/segment.cpp
-                        src/def.hpp
+                        # src/fcm.cpp
+                        # src/tbl64.cpp
+                        # src/tbl32.cpp
+                        # src/cmls4.cpp
+                        # src/logtbl8.cpp
+                        # src/filter.cpp
+                        # src/segment.cpp
+                        # src/def.hpp
                         src/par.hpp
-                        src/assert.hpp
-                        src/fn.hpp
-                        src/mdlpar.hpp
-                        src/vizpaint.cpp
-                        src/vizdef.hpp)
+                        # src/assert.hpp
+                        # src/fn.hpp
+                        # src/mdlpar.hpp
+                        # src/vizpaint.cpp
+                        # src/vizdef.hpp
+                        )
 
 
 #add_executable(excule_N src/excludeN.cpp)
