--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,15 @@ refm-tarm.pos
 refm-tarm-s0
 refm-tarm-s1
 refm-tarm.pos
+refm-tarm.pos
+refm-tarm-s0-refm.pos
+refm-tarm-s0-refm-s0
+refm-tarm-s0-refm-s1
+refm-tarm-s1-refm.pos
+refm-tarm-s1-refm-s0
+refm-tarm-s1-refm-s1
+refm-tarm-s1-refm-s1
+refm-tarm.pos
+final-refm-tarm.pos
+refm-tarm.pos
+refm-tarm.pos
