--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ mid-1-refm_tarm.pos
 mid-1-refm_tarm.pos
 out.jpg
 test.pos
+paper/sup.aux
+paper/sup.fdb_latexmk
+paper/sup.fls
+paper/sup.log
+paper/sup.out
+paper/sup.synctex.gz
