--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: cpp
 
+matrix:
+  include:
+    - os: linux
+      env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
+      addons:
+        apt:
+          packages:
+            - g++-5
+          sources: &sources
+            - llvm-toolchain-precise-3.8
+            - ubuntu-toolchain-r-test
+            
 script: cmake . && make -j4
