--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
+sudo: false
 language: cpp
+
+cache:
+  apt: true
 
 matrix:
   include:
-    - os: linux
-      env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
+    - env: CXX=g++-5 CC=gcc-5
       addons:
         apt:
           packages:
             - g++-5
           sources: &sources
-            - llvm-toolchain-precise-3.8
             - ubuntu-toolchain-r-test
-            
+            - llvm-toolchain-precise
+            - llvm-toolchain-precise-3.7
+            - llvm-toolchain-precise-3.6
+
 script: cmake . && make -j4
