--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,19 @@
-sudo: true
 language: cpp
-
-cache:
-  apt: true
 
 matrix:
   include:
-    - env: CXX=g++-5 CC=gcc-5
+    # works on Precise and Trusty
+    - os: linux
       addons:
         apt:
-          packages:
-            - g++-5
-          sources: &sources
+          sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise
-            - llvm-toolchain-precise-3.7
-            - llvm-toolchain-precise-3.6
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+before_install:
+    - eval "${MATRIX_EVAL}"
 
 script: cmake . && make -j4
