--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(smashpp  src/main.cpp
                         )
 
 
-add_executable(smashpp-inv-rep src/invRep.cpp)
+#add_executable(smashpp-inv-rep src/invRep.cpp)
 
 #add_executable(excule_N src/excludeN.cpp)
 
