--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,6 @@
         "algorithm": "cpp",
         "valarray": "cpp"
     },
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/usr/bin/python3",
+    "git.postCommitCommand": "push"
 }
