--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,12 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "~/Desktop/smashpp/smashpp",
-            "args": ["-r","refm","-t","tarm","-w","8000"],
+            "program": "${workspaceRoot}/smashpp",
+            "args": ["-r","RefMut","-t","TarMut","-rm","20,0,0.01,0.95/5,0,0.6,0.95","-m","700000","-w","1000","-th","1.9"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true,
+            "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "/usr/bin/gdb",
             "setupCommands": [
