--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceRoot}/smashpp",
-            "args": ["-r","RefMut","-t","TarMut","-rm","20,0,0.01,0.95/5,0,0.6,0.95","-m","700000","-w","1000","-th","1.9"],
+            "args": ["-r refm -t tarm -rm 20,0,0.01,0.95/5,0,0.6,0.95"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
