--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceRoot}/smashpp",
-            "args": ["-r refm -t tarm -rm 20,0,0.01,0.95/5,0,0.6,0.95"],
+            "args": ["-r", "refs", "-t", "tars"],
+            // "args": ["-r", "refm", "-t", "tarm", "-rm", "20,1,0.01,0.95/5,1,0.6,0.95"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
