--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceRoot}/smashpp",
-            "args": ["-r", "refs", "-t", "tars"],
+            // "args": ["-r", "refs", "-t", "tars"],
             // "args": ["-r", "refm", "-t", "tarm", "-rm", "20,1,0.01,0.95/5,1,0.6,0.95"],
+            "args": ["-viz", "-np", "-o", "out.svg", "refs-tars.pos"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
