--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "program": "${workspaceRoot}/smashpp",
             // "args": ["-r", "refs", "-t", "tars"],
             // "args": ["-r", "refm", "-t", "tarm", "-rm", "20,1,0.01,0.95/5,1,0.6,0.95"],
-            "args": ["-viz", "-np", "-o", "out.svg", "refs-tars.pos"],
+            "args": ["-viz", "-l", "2", "-o", "out.svg", "refs-tars.pos"],
+            // "args": ["-viz", "-np", "-o", "out.svg", "refs-tars.pos"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
