--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,8 @@
         "valarray": "cpp"
     },
     "python.pythonPath": "/usr/bin/python3",
-    "git.postCommitCommand": "push"
+    "git.postCommitCommand": "push",
+    "C_Cpp.intelliSenseEngineFallback": "Enabled",
+    // "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
+    "terminal.integrated.shell.windows": "C:\\WINDOWS\\sysnative\\bash.exe"
 }
