--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
-cmake_minimum_required(VERSION 3.3.2)
+#cmake_minimum_required(VERSION 3.3.2)
 project(smashpp)
 # set(CMAKE_BUILD_TYPE RelWithDebInfo)
+
+set(CMAKE_C_COMPILER /usr/local/gcc-8.2/bin/gcc-8.2)
+set(CMAKE_CXX_COMPILER /usr/local/gcc-8.2/bin/g++-8.2)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3 -Wall")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3 -Wall")
