--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,12 @@
 project(smashpp)
 # set(CMAKE_BUILD_TYPE RelWithDebInfo)
 
-set(CMAKE_C_COMPILER /usr/local/gcc-8.2/bin/gcc-8.2)
-set(CMAKE_CXX_COMPILER /usr/local/gcc-8.2/bin/g++-8.2)
+# set(CMAKE_C_COMPILER /usr/local/gcc-8.2/bin/gcc-8.2)
+# set(CMAKE_CXX_COMPILER /usr/local/gcc-8.2/bin/g++-8.2)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3 -Wall")
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3 -Wall")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3 -pg") # mem prof
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -O3 -fopenmp -D_GLIBCXX_PARALLEL")
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3")
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
 
 add_executable(
   smashpp  
