--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,7 @@
         "mutex": "cpp",
         "shared_mutex": "cpp"
     },
-    "python.pythonPath": "/usr/bin/python3",
+    "python.pythonPath": "C:\\Users\\Utilizador\\Anaconda3\\python.exe",
     "git.postCommitCommand": "push",
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
     // "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
