--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,7 @@
         "markdown",
         "latex",
         "plaintext"
-    ]
+    ],
+    "html.format.wrapLineLength": 80,
+    "editor.wordWrap": "wordWrapColumn"
 }
