--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 **/CMakeFiles
-**/.vscode
+CMakeCache.txt
+Makefile
+cmake_install.cmake
+.vscode
 diogo/*
-tmp/*
-
-*.prf
-*.co
-*.iae
-*.slf
-*.cbp
 *.svg
-*.png
 **/*.blg
 **/*.bbl
 **/*.aux
@@ -20,61 +15,13 @@ tmp/*
 **/*.synctex.gz
 goose-*
 *_bk
-refs-tars*
-refm-tarm*
-refl-tarl*
-final-*
-0-tar*
-1-tar*
-0-ref*
-1-ref*
-
 GeCo
 gmon.out
 callgrind.out*
-out
-geco-w*
-refs-tars-s*
-refs-tars.fil*
-refs-tars.pos
-eleanora*
 HS18.fa
-viruses.fasta
 b
 ac
-gprof2dot.py
-perf.data*
-refl
-refm
-refs
-tarl
-tarm
-tars
-test
-
-CMakeCache.txt
-Makefile
-cmake_install.cmake
-
-report
-
-cmsk2.h
-cmsk2.cpp
-mid-0-refm_tarm.pos
-mid-1-refm_tarm.pos
-mid-1-refm_tarm.pos
-out.jpg
-test.pos
-script/goose-fastqsimulation
-script/goose-mutatedna
-
-rs
 r
 t
 r-t.pos
-models
-out.svg
-smash
-smash_paper.pdf
-example/0*
-example/1*
+gprof2dot.py
