--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,19 +11,20 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -O3 -Wall -march=nat
 
 add_executable(
   smashpp  
-           src/number.hpp
-           src/exception.hpp
-           src/string.hpp
-           src/def.hpp
-           src/par.hpp
-           src/assert.hpp
-           src/time.hpp
-           src/file.hpp
-           src/container.hpp
-           src/naming.hpp
-           src/mdlpar.hpp
-           src/svg.hpp
-           src/color.hpp
+          #  src/def.hpp
+          #  src/number.hpp
+          #  src/string.hpp
+          #  src/exception.hpp
+          # #  src/par.hpp
+          #  src/assert.hpp
+          #  src/time.hpp
+          #  src/file.hpp
+          #  src/container.hpp
+          #  src/naming.hpp
+          #  src/mdlpar.hpp
+          #  src/svg.hpp
+          #  src/color.hpp
+           src/par.cpp
            src/fcm.cpp
            src/tbl64.cpp
            src/tbl32.cpp
