--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,8 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
+            "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
+            // "preLaunchTask": "g++.exe build active file",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -37,6 +39,6 @@
                     "ignoreFailures": true
                 }
             ]
-        },
+        }
     ]
 }
