--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,44 +2,9 @@
   "tasks": [
     {
       "type": "shell",
-      // "options": {
-      //   "cwd": "C:\\cygwin64\\bin"
-      // },
       "label": "g++.exe build active file",
-      "command": "C:\\cygwin64\\bin\\g++.exe",
-      "args": [
-        "-std=c++17",
-        "-pthread",
-        "-Wall",
-        "-g",
-        "src\\par.cpp",
-        "src\\fcm.cpp",
-        "src\\tbl64.cpp",
-        "src\\tbl32.cpp",
-        "src\\cmls4.cpp",
-        "src\\logtbl8.cpp",
-        "src\\filter.cpp",
-        "src\\segment.cpp",
-        "src\\color.cpp",
-        "src\\svg.cpp",
-        "src\\vizpaint.cpp",
-        "src\\main.cpp",
-        "-o",
-        "smashpp",
-        // "${workspaceFolder}\\smashpp",
-        // "${workspaceFolder}\\src\\par.cpp",
-        // "${workspaceFolder}\\src\\fcm.cpp",
-        // "${workspaceFolder}\\src\\tbl64.cpp",
-        // "${workspaceFolder}\\src\\tbl32.cpp",
-        // "${workspaceFolder}\\src\\cmls4.cpp",
-        // "${workspaceFolder}\\src\\logtbl8.cpp",
-        // "${workspaceFolder}\\src\\filter.cpp",
-        // "${workspaceFolder}\\src\\segment.cpp",
-        // "${workspaceFolder}\\src\\color.cpp",
-        // "${workspaceFolder}\\src\\svg.cpp",
-        // "${workspaceFolder}\\src\\vizpaint.cpp",
-        // "${workspaceFolder}\\src\\main.cpp"
-      ],
+      // "command": "C:\\cygwin64\\bin\\g++.exe -g -std=c++17 -pthread -Wall src\\par.cpp src\\fcm.cpp src\\tbl64.cpp src\\tbl32.cpp src\\cmls4.cpp src\\logtbl8.cpp src\\filter.cpp src\\segment.cpp src\\color.cpp src\\svg.cpp src\\vizpaint.cpp src\\main.cpp -o smashpp",
+      "command": "C:\\cygwin64\\bin\\g++.exe -g -std=c++17 -pthread -Wall src\\*.cpp -o smashpp",
       "group": {
         "kind": "build",
         "isDefault": true
