--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,10 @@
             "program": "${workspaceFolder}/smashpp",
             "args": [
                 "-w",
-                "100",
+                "200",
                 "-rm",
-                "8,0,1,0.95",
-                // "11,0,1,0.95/8,0,1,0.9",
+                // "8,0,1,0.95",
+                "11,0,1,0.95/8,0,1,0.9",
                 "-r",
                 "1",
                 "-t",
@@ -22,15 +22,15 @@
                 "-th",
                 "1.8",
                 "-v",
-                // "-dp",
-                "-nr"
+                "-dp",
+                // "-nr"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
+            // "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
             // "preLaunchTask": "g++.exe build active file",
             "setupCommands": [
                 {
