--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,19 +11,23 @@
             "program": "${workspaceFolder}/smashpp",
             "args": [
                 "-w",
-                "200",
-                "-rm",
-                // "8,0,1,0.95",
-                "11,0,1,0.95/8,0,1,0.9",
+                "45",
+                // "-rm",
+                // "11,0,1,0.95/8,0,1,0.9",
+                // // "8,0,1,0.95",
+                "-l",
+                "3",
                 "-r",
-                "1",
+                "refs",
+                // "1",
                 "-t",
-                "2",
-                "-th",
-                "1.8",
+                "tars",
+                // "2",
+                // "-th",
+                // "1.8",
                 "-v",
-                "-dp",
-                // "-nr"
+                // "-dp",
+                "-nr"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
