--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            // "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
+            "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
             // "preLaunchTask": "g++.exe build active file",
             "setupCommands": [
                 {
