--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
                 // "2",
                 // "-th",
                 // "1.8",
-                "-v",
+                // "-v", // causes issue in windows
                 // "-dp",
                 "-nr"
             ],
