--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,24 +11,30 @@
             "program": "${workspaceFolder}/smashpp",
             "args": [
                 "-w",
-                "45",
-                // "-rm",
-                // "11,0,1,0.95/8,0,1,0.9",
-                "-l",
-                "3",
+                // "45",
+                "200",
+                "-rm",
+                "11,0,1,0.95/8,0,1,0.9",
+                // "-l",
+                // "3",
                 "-r",
-                "refs",
-                // "1",
+                // "refs",
+                "1",
                 "-t",
-                "tars",
-                // "2",
-                // "-th",
-                // "1.8",
-                // "-v", // causes issue in windows
-                // "-dp",
-                "-nr",
+                // "tars",
+                "2",
+                "-th",
+                "1.8",
+                "-v", // causes issue in windows
+                "-dp",
+                // "-nr",
                 "-m",
-                "10"
+                "60",
+                "-rb",
+                "40",
+                "-re",
+                "10",
+                "-sa"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
