--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,7 @@
         "tuple": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp"
-    }
+    },
+    "latex-workshop.latexindent.path": "C:\\Program Files\\MiKTeX 2.9\\miktex\\bin\\x64\\latexindent.exe",
+    "latex-workshop.intellisense.package.enabled": true
 }
