--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,38 +10,40 @@
             "request": "launch",
             "program": "${workspaceFolder}/smashpp",
             "args": [
-                "-w",
+                // "-w",
                 // "45",
-                "200",
-                "-rm",
-                "11,0,1,0.95/8,0,1,0.9",
+                // "200",
+                // "-rm",
+                // "11,0,1,0.95/8,0,1,0.9",
                 // "-l",
                 // "3",
                 "-r",
-                // "refs",
-                "1",
+                "refs",
+                // "1",
                 "-t",
-                // "tars",
-                "2",
-                "-th",
-                "1.8",
-                "-v", // causes issue in windows
-                "-dp",
+                "tars",
+                // "2",
+                // "-th",
+                // "1.8",
+                // "-v", // causes issue in windows
+                // "-dp",
                 // "-nr",
-                "-m",
-                "60",
-                "-rb",
-                "40",
-                "-re",
-                "10",
-                "-sa"
+                // "-m",
+                // "60",
+                // "-rb",
+                // "40",
+                // "-re",
+                // "10",
+                // "-sa",
+                "-wt",
+                "5"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
+            // "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
             // "preLaunchTask": "g++.exe build active file",
             "setupCommands": [
                 {
