--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+diogo/*
+!diogo/xp2/mtDNA_Chordata_3327_22-03-2019
+!diogo/xp2/nrc
+!diogo/xp2/run.py
+
 **/build
 .vscode/ipch
-diogo/*
 *.svg
 **/*.blg
 **/*.bbl
