--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-diogo/*
+# diogo/*
+diogo/experiment1/*
+diogo/experiment2/*
+diogo/old_xp2/*
+diogo/xp2/*
 !diogo/xp2/mtDNA_Chordata_3327_22-03-2019
 !diogo/xp2/nrc
 !diogo/xp2/run.py
