--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# diogo/*
 diogo/experiment1/*
 diogo/experiment2/*
 diogo/old_xp2/*
@@ -6,6 +5,9 @@ diogo/xp2/*
 !diogo/xp2/mtDNA_Chordata_3327_22-03-2019
 !diogo/xp2/nrc
 !diogo/xp2/run.py
+!diogo/xp2/GeCo
+!diogo/xp2/goose-fasta2seq
+!diogo/xp2/goose-splitreads
 
 **/build
 .vscode/ipch
