--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ diogo/xp2/*
 !diogo/xp2/goose-fasta2seq
 !diogo/xp2/goose-splitreads
 
+*.svg
+!example.svg
+
 **/build
 .vscode/ipch
-*.svg
 **/*.blg
 **/*.bbl
 **/*.aux
