--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,40 +10,40 @@
             "request": "launch",
             "program": "${workspaceFolder}/smashpp",
             "args": [
-                // "-f",
-                // "45",
-                // "200",
-                // "-rm",
-                // "11,0,1,0.95/8,0,1,0.9",
+                "-rm",
+                "11,0,1,0.95/8,0,1,0.9",
+                "-r",
+                "1",
+                // "diogo/xp2/1",
+                "-t",
+                "45",
+                // "diogo/xp2/45",
+                "-m",
+                "13",
+                "-dp",
+                "-f",
+                "5000",
                 // "-l",
                 // "3",
-                "-r",
-                "refs",
-                // "1",
-                "-t",
-                "tars",
-                // "2",
                 // "-th",
                 // "1.8",
                 // "-v", // causes issue in windows
-                // "-dp",
                 // "-nr",
-                // "-m",
-                // "60",
                 // "-rb",
                 // "40",
                 // "-re",
                 // "10",
                 // "-sa",
-                "-ft",
-                "5"
+                // "-ft",
+                // "5"
             ],
-            "stopAtEntry": false,
+            "stopAtEntry": true,
+            // "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            // "miDebuggerPath": "C:\\cygwin64\\bin\\gdb.exe",
+            "miDebuggerPath": "C:\\mingw-w64\\mingw64\\bin\\gdb.exe",
             // "preLaunchTask": "g++.exe build active file",
             "setupCommands": [
                 {
