--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,26 +13,24 @@
                 "-rm",
                 "11,0,1,0.95/8,0,1,0.9",
                 "-r",
-                "1",
-                // "diogo/xp2/1",
+                "mtdna",
                 "-t",
-                "45",
-                // "diogo/xp2/45",
+                "scaf",
                 "-m",
                 "13",
                 "-dp",
                 "-f",
-                "5000",
+                "200",
                 // "-l",
                 // "3",
-                // "-th",
-                // "1.8",
-                // "-v", // causes issue in windows
-                // "-nr",
-                // "-rb",
-                // "40",
-                // "-re",
-                // "10",
+                "-th",
+                "1.0",
+                "-v", // causes issue in windows
+                "-nr",
+                "-rb",
+                "10",
+                "-re",
+                "5",
                 // "-sa",
                 // "-ft",
                 // "5"
